# WassersteinFlowMatching

./: README.md  pyproject.toml  tutorial_point_cloud_wfm.ipynb  tutorial_spiral_bwfm.ipynb
BuresWassersteinFlowMatching/: .gitignore  README.md  pyproject.toml  requirements.txt
BuresWassersteinFlowMatching/bwflowmatching/: BuresWassersteinFlowMatching.py  DefaultConfig.py  __init__.py  _utils_Neural.py  utils_OT.py
BuresWassersteinFlowMatching/tests/: test_bureswassersteinflowmatching.py
WassersteinFlowMatching/: README.md  pyproject.toml  requirements.txt
WassersteinFlowMatching/.github/: BuresEuclideanFlowMatching.py
WassersteinFlowMatching/.github/workflows/: test.yaml
WassersteinFlowMatching/tests/: test_wassersteinflowmatching.py
WassersteinFlowMatching/wassersteinflowmatching/: DefaultConfig.py  WassersteinFlowMatching.py  __init__.py  _utils_Processing.py  _utils_Transformer.py  utils_OT.py
src/wassersteinflowmatching/: __init__.py
src/wassersteinflowmatching/bures_wasserstein/: BuresWassersteinFlowMatching.py  __init__.py  _utils_Neural.py  utils_Noise.py  utils_OT.py  utils_Pointclouds.py
src/wassersteinflowmatching/riemannian_wasserstein/: DefaultConfig.py  RiemannianWassersteinFlowMatching.py  __init__.py  _utils_Transformer.py  utils_Geom.py  utils_Noise.py  utils_OT.py
src/wassersteinflowmatching/wasserstein/: DefaultConfig.py  WassersteinFlowMatching.py  _utils_Transformer.py  utils_Noise.py  (+1 more)
tutorials/: tutorial_point_cloud_2000_wfm.ipynb  tutorial_point_cloud_wfm.ipynb  tutorial_spherical_mnist_rwfm.ipynb  tutorial_spiral_bwfm.ipynb
