[tool.poetry]
name = "wassersteinflowmatching"
version = "0.1.0"
description = "Flow Matching for point clouds"
authors = ["Doron Haviv"]
license = "MIT"
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.4.23"
flax = "^0.8.2"
ott-jax = "^0.4.6"
clu = "^0.0.12"
tqdm = "^4.66.2"
tensorflow_probability = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"