[tool.poetry]
name = "bwflowmatching"
version = "0.1.0"
description = "Flow Matching on the Bures-Wasserstein manifold"
authors = ["Anon"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flax = "0.8.2"
ott-jax = "0.4.6"
clu = "0.0.12"
tqdm = "^4.66.2"
tensorflow_probability = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
